@@ -1,9 +1,11 @@
+<<<<<<< HEAD
 XXXX.XX.XX Version X.X.X
  * Support for 2018-11-09 REST version. Please see our REST API documentation and blogs for information about the related added features.
  * Added appendBlockFromURL method. A block may be created with another blob as its source.
  * Added uploadPagesFromURL method. Pages may be written to with another blob as their source.
  * Fixed a bug in which putBlockFromURI accessConditions were indicated as being on the destination when in actuality they only apply to the source.
  * Added a method to get share stats in bytes.
+ * Support for snapshot-level shared access signature tokens on blobs.
 
 2019.03.01 Version 8.1.0
  * Added support for the deep sync copy blob api.
